--- a/game.css
+++ b/game.css
@@ -151,6 +151,11 @@ p {
 #divGame {
     text-align: center;
     margin-bottom: 150px;
+    color: white;
+}
+
+#connaissez-vous {
+    color: #99C1DA;
 }
 
 #demarrer {
